--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ CMA, SEALEND, MAERSK, MSC, ZIM, HAPAG, COSCO
                 <p>Предполагаемый функционал:</p>
                 <ol>
                     <li>Текущий статус контейнера (На судне, в порту, готовы к погрузке)</li>
+                    <li>Текущий статус контейнера (На судне, в порту, готовы к погрузке)</li>
                     <li>Список всех контейнеров с их статусами</li>
                     <li>Список контейнеров прибывающих в порт на этой неделе</li>
                     <li>Список контейнеров прибывающих в порт на  следующей неделе</li>
